--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-httpdis>=0.6.2
+httpdis>=0.6.4
 pyOpenSSL
 python-magic
 psutil>=2.1
@@ -6,5 +6,6 @@ pycurl
 PyYAML>=3.10
 #pyserial
 Unidecode
+semantic_version
 six>=1.12.0
 #xmodem
